--- a/ProyectoHex/nbproject/project.properties
+++ b/ProyectoHex/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.java.Robot
+main.class=co.edu.javeriana.algoritmos.proyecto.reakt.Robot
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
